--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
 
 	<groupId>com.brw</groupId>
 	<artifactId>BRW</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>BRV</name>
 	<description>Demo project for Spring Boot</description>
@@ -64,6 +63,11 @@
 		    <groupId>com.stripe</groupId>
 		    <artifactId>stripe-java</artifactId>
 		    <version>5.21.0</version>
+		</dependency>
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-tomcat</artifactId>
+		   <scope>provided</scope>
 		</dependency>
 	</dependencies>
 
