db and auth0 changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,30 @@
 # ===============================
 # DATABASE
 # ===============================
- 
+
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
- 
-spring.datasource.url=jdbc:mysql://localhost:3306/devbusinessdatabase2
-spring.datasource.username=root
-spring.datasource.password=
-  
- 
- 
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/devbusinessdatabase2
+#spring.datasource.username=root
+#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://brwdev.cx4tgyitha5s.us-east-1.rds.amazonaws.com/brwdev
+spring.datasource.username=admin
+spring.datasource.password=iX9pqyh1oSkEYVujHSu1
+
+
+
+
 # ===============================
 # JPA / HIBERNATE
 # ===============================
- 
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
 # spring-boot-jwts is the identifier of the API that we just created
-auth0.audience=https://mycart.auth0.com/api/v2/
+auth0.audience=https://dev-5friofof.auth0.com/api/v2/
 # replace YOUR-DOMAIN to get something like https://bkrebs.auth0.com/
-auth0.issuer=https://mycart.auth0.com/
+#auth0.issuer=https://mycart.auth0.com/
+auth0.issuer=https://dev-5friofof.auth0.com
