--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
 # spring-boot-jwts is the identifier of the API that we just created
-#auth0.audience=https://dev-5friofof.auth0.com/api/v2/
-auth0.audience=https://mycart.auth0.com/api/v2/
+auth0.audience=https://dev-5friofof.auth0.com/api/v2/
+#auth0.audience=https://mycart.auth0.com/api/v2/
 # replace YOUR-DOMAIN to get something like https://bkrebs.auth0.com/
-auth0.issuer=https://mycart.auth0.com/
-#auth0.issuer=https://dev-5friofof.auth0.com
+#auth0.issuer=https://mycart.auth0.com/
+auth0.issuer=https://dev-5friofof.auth0.com
