--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ===============================
-# DATABASE
+# MY SQL DATABASE
 # ===============================
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -12,8 +12,6 @@ spring.datasource.username=admin
 spring.datasource.password=iX9pqyh1oSkEYVujHSu1
 
 
-
-
 # ===============================
 # JPA / HIBERNATE
 # ===============================
@@ -23,9 +21,39 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
+
+# ===============================
+# AUTH 0
+# ===============================
 # spring-boot-jwts is the identifier of the API that we just created
 #auth0.audience=https://dev-5friofof.auth0.com/api/v2/
 auth0.audience=https://mycart.auth0.com/api/v2/
 # replace YOUR-DOMAIN to get something like https://bkrebs.auth0.com/
 auth0.issuer=https://mycart.auth0.com/
 #auth0.issuer=https://dev-5friofof.auth0.com
+
+
+# ===============================
+# MONGO DB
+# ===============================
+# Mongo database URI. When set, host and port are ignored.
+#spring.data.mongodb.uri=54.198.119.109
+# Mongo server host.
+spring.data.mongodb.host=54.198.119.109
+# Mongo server port.
+spring.data.mongodb.port=27017
+# Authentication database name.
+spring.data.mongodb.authentication-database=brwdev
+# Username
+spring.data.mongodb.username=app_mongo
+# Login password of the mongo server.
+spring.data.mongodb.password=appUser123
+# Enable Mongo repositories.
+spring.data.mongodb.repositories.enabled=true
+
+# Database name.
+#spring.data.mongodb.database=test
+# Fully qualified name of the FieldNamingStrategy to use.
+#spring.data.mongodb.field-naming-strategy= 
+# GridFS database name.
+#spring.data.mongodb.grid-fs-database= 
