Auth o related changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,12 +25,17 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 # ===============================
 # AUTH 0
 # ===============================
+#Abhijit
 # spring-boot-jwts is the identifier of the API that we just created
-#auth0.audience=https://dev-5friofof.auth0.com/api/v2/
-auth0.audience=https://mycart.auth0.com/api/v2/
+#auth0.audience=https://mycart.auth0.com/api/v2/
 # replace YOUR-DOMAIN to get something like https://bkrebs.auth0.com/
-auth0.issuer=https://mycart.auth0.com/
-#auth0.issuer=https://dev-5friofof.auth0.com
+#auth0.issuer=https://mycart.auth0.com/
+
+#Ashwin
+# spring-boot-jwts is the identifier of the API that we just created
+auth0.audience=https://dev-5friofof.auth0.com/api/v2/
+# replace YOUR-DOMAIN to get something like https://bkrebs.auth0.com/
+auth0.issuer=https://dev-5friofof.auth0.com
 
 
 # ===============================
