--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
          	<groupId>org.springframework.boot</groupId>
          	<artifactId>spring-boot-starter-mail</artifactId>
       	</dependency>
+	
+		<dependency>
+		  	<groupId>com.amazonaws</groupId>
+		   	<artifactId>aws-java-sdk-s3</artifactId>
+		   	<version>1.11.475</version>
+		</dependency>
 	</dependencies>
 
 	<build>
