--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #spring.datasource.username=root
 #spring.datasource.password=
 spring.datasource.url=jdbc:mysql://brwdev.cx4tgyitha5s.us-east-1.rds.amazonaws.com/brwdev
+#spring.datasource.url=jdbc:mysql://brwdev.ccangthif0ey.us-west-1.rds.amazonaws.com/brwdev
 spring.datasource.username=admin
 spring.datasource.password=iX9pqyh1oSkEYVujHSu1
 
