--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,10 +34,13 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 
 #Ashwin
 # spring-boot-jwts is the identifier of the API that we just created
-auth0.audience=https://dev-5friofof.auth0.com/api/v2/
+#auth0.audience=https://dev-5friofof.auth0.com/api/v2/
 # replace YOUR-DOMAIN to get something like https://bkrebs.auth0.com/
-auth0.issuer=https://dev-5friofof.auth0.com
+#auth0.issuer=https://dev-5friofof.auth0.com
 
+# MItanjali
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-5friofof.auth0.com/
+auth0.audience=http://localhost:8080/api/
 
 # ===============================
 # MONGO DB
@@ -45,17 +48,17 @@ auth0.issuer=https://dev-5friofof.auth0.com
 # Mongo database URI. When set, host and port are ignored.
 #spring.data.mongodb.uri=54.198.119.109
 # Mongo server host.
-spring.data.mongodb.host=54.198.119.109
+#spring.data.mongodb.host=54.198.119.109
 # Mongo server port.
-spring.data.mongodb.port=27017
+#spring.data.mongodb.port=27017
 # Authentication database name.
-spring.data.mongodb.authentication-database=brwdev
+#spring.data.mongodb.authentication-database=brwdev
 # Username
-spring.data.mongodb.username=app_mongo
+#spring.data.mongodb.username=app_mongo
 # Login password of the mongo server.
-spring.data.mongodb.password=appUser123
+#spring.data.mongodb.password=appUser123
 # Enable Mongo repositories.
-spring.data.mongodb.repositories.enabled=true
+#spring.data.mongodb.repositories.enabled=true
 
 # Database name.
 #spring.data.mongodb.database=test
