--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 # ===============================
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-5friofof.auth0.com/
-#auth0.audience=http://localhost:8080/api/
-auth0.audience=http://dev.bizrealworth.com/api/
+auth0.audience=http://localhost:8080/api/
+#auth0.audience=http://dev.bizrealworth.com/api/
 
 #http://localhost:8080/#/search/buy
 #http://dev.bizrealworth.com/#/search/buy
