--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.url=jdbc:mysql://brwdev.cx4tgyitha5s.us-east-1.rds.amazonaws.c
 #spring.datasource.url=jdbc:mysql://brwdev.ccangthif0ey.us-west-1.rds.amazonaws.com/brwdev
 #spring.datasource.username=admin
 #spring.datasource.password=iX9pqyh1oSkEYVujHSu1
-#spring.datasource.username=brw_app_dev
-#spring.datasource.password=HDYnCWRnjn8qxTA81y3iNAikCeCJ
+spring.datasource.username=brw_app_dev
+spring.datasource.password=HDYnCWRnjn8qxTA81y3iNAikCeCJ
 
 
 # ===============================
