--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 # MY SQL DATABASE
 # ===============================
 
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/devbusinessdatabase2
 #spring.datasource.username=root
