--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
 		    <version>2.10.0</version>
 		</dependency>
 		
+		<dependency>
+		  <groupId>com.google.api-client</groupId>
+		  <artifactId>google-api-client</artifactId>
+		  <version>1.30.9</version>
+		</dependency>
+	
 	</dependencies>
 
 
