--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,17 @@
 # MY SQL DATABASE
 # ===============================
 
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/devbusinessdatabase2
-#spring.datasource.username=root
-#spring.datasource.password=
-spring.datasource.url=jdbc:mysql://brwdev.cx4tgyitha5s.us-east-1.rds.amazonaws.com/brwdev
-#spring.datasource.url=jdbc:mysql://brwdev.ccangthif0ey.us-west-1.rds.amazonaws.com/brwdev
+#spring.datasource.url=jdbc:mysql://brwdev.cx4tgyitha5s.us-east-1.rds.amazonaws.com/brwdev
+spring.datasource.url=jdbc:mysql://brwprod.ccangthif0ey.us-west-1.rds.amazonaws.com/brwdev
 #spring.datasource.username=admin
 #spring.datasource.password=sgfsgfsdgfsdkfhjsd
-spring.datasource.username=brw_app_dev
-spring.datasource.password=HDYnCWRnjn8qxTA81y3iNAikCeCJ
+#spring.datasource.username=brw_app_dev
+#spring.datasource.password=HDYnCWRnjn8qxTA81y3iNAikCeCJ
+#spring.datasource.username=admin
+#spring.datasource.password=vuCb4wk5i4gP7mwH2JwvulUURU
+spring.datasource.username=brw_app_prod
+spring.datasource.password=SoCWP@LAkcJjwEqOSCj!aPNyVjjDvr4JJ4PoNJ
 
 
 # ===============================
